--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,12 +66,11 @@
           <p>
             <strong>Follow me on social media:</strong>
             <br>
-            <a href="https://www.instagram.com/nightkingale/">Instagram</a> |
-            <a href="https://www.reddit.com/user/Nightkingale">Reddit</a> |
-            <a href="https://www.twitch.tv/nightkingale/">Twitch</a>
+            <a href="https://www.instagram.com/jem_birdphotography/">Instagram</a> |
+            <a href="https://www.reddit.com/user/jemthebirder">Reddit</a> |
             <br>
-            <a href="https://twitter.com/Nightkingale">Twitter</a> |
-            <a href="https://www.youtube.com/@Nightkingale">YouTube</a>
+            <a href="https://twitter.com/jemthebread">Twitter</a> |
+            <a href="https://www.youtube.com/@Jem7">YouTube</a>
             <br>
           </p>
         </div>
