--- a/_layouts/works.html
+++ b/_layouts/works.html
@@ -46,28 +46,32 @@
 
   </div>
 
-<footer id="footer">
+  <footer id="footer">
     <div style="text-align:center">
       <div style="display: flex; justify-content: center; gap: 15px;">
         <div>
           <p>
             <strong>Follow me on social media:</strong>
             <br>
+            <style>
+              .social-icon {
+                color: #ffffff;
+                font-size: 2rem;
+              }
+            </style>
+            <a class="social-icon" href="https://discord.com/users/801868147941441607" target="_blank">
+              <ion-icon name="logo-discord"></ion-icon>
+            </a>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
             <a href="https://www.instagram.com/jem_birdphotography/">Instagram</a> |
             <a href="https://www.reddit.com/user/jemthebirder">Reddit</a> |
             <br>
             <a href="https://twitter.com/jemthebread">Twitter</a> |
             <a href="https://www.youtube.com/@Jem7">YouTube</a>
             <br>
-          </p>
-        </div>
-      </div>
-      <p style="line-height: 0px; margin-top: 5px;">
-      </p>
-      </p>
-      <p style="line-height: 0px;">
-        <small>© Jem 2025</small>
-      </p>
+                  <p style="line-height:10px;">
+                    <small>© Jem 2025</small>
     </div>
   </footer>
 </body>
