--- a/_layouts/works.html
+++ b/_layouts/works.html
@@ -53,25 +53,70 @@
           <p>
             <strong>Follow me on social media:</strong>
             <br>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
             <style>
               .social-icon {
                 color: #ffffff;
                 font-size: 2rem;
+                transition: color 0.2s;
+                text-decoration: none;
+                margin: 0 5px;
+              }
+            </style>
+            <style>
+              .social-icon2 {
+                color: #ffffff;
+                font-size: 2rem;
+                transition: color 0.2s;
+                text-decoration: none;
+                margin: 0 5px;
+              }
+            </style>
+            <style>
+              .social-icon3 {
+                color: #ffffff;
+                font-size: 2rem;
+                transition: color 0.2s;
+                text-decoration: none;
+                margin: 0 5px;
+              }
+            </style>
+            <style>
+              .social-icon4 {
+                color: #ffffff;
+                font-size: 2rem;
+                transition: color 0.2s;
+                text-decoration: none;
+                margin: 0 5px;
+              }
+            </style>
+            <style>
+              .social-icon5 {
+                color: #ffffff;
+                font-size: 2rem;
+                transition: color 0.2s;
+                text-decoration: none;
+                margin: 0 5px;
               }
             </style>
             <a class="social-icon" href="https://discord.com/users/801868147941441607" target="_blank">
               <ion-icon name="logo-discord"></ion-icon>
             </a>
-            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-            <a href="https://www.instagram.com/jem_birdphotography/">Instagram</a> |
-            <a href="https://www.reddit.com/user/jemthebirder">Reddit</a> |
+            <a class="social-icon2" href="https://www.instagram.com/jem_birdphotography" target="_blank">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <a class="social-icon3" href="https://www.reddit.com/user/jemthebirder" target="_blank">
+              <ion-icon name="logo-reddit"></ion-icon>
+            </a>
+            <a class="social-icon4" href="https://twitter.com/jemthebread" target="_blank">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a class="social-icon5" href="https://youtube.com/@Jem7" target="_blank">
+              <ion-icon name="logo-youtube"></ion-icon>
             <br>
-            <a href="https://twitter.com/jemthebread">Twitter</a> |
-            <a href="https://www.youtube.com/@Jem7">YouTube</a>
-            <br>
-                  <p style="line-height:10px;">
-                    <small>© Jem 2025</small>
+              <p style="line-height:10px;">
+              <small>© Jem 2025</small>
     </div>
   </footer>
 </body>
