--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -128,7 +128,9 @@
             <a class="social-icon5" href="https://youtube.com/@Jem7" target="_blank">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
+            <p style="line-height:1px;">
             <small>© Jem 2025</small>
+            </p>
           <br>
   </div>
 </footer>
