--- a/_layouts/works.html
+++ b/_layouts/works.html
@@ -52,6 +52,7 @@
         <div>
           <p>
             <strong>Follow me on social media:</strong>
+            <p style="line-height:1px;">
             <br>
             <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
             <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -115,6 +116,7 @@
             <a class="social-icon5" href="https://youtube.com/@Jem7" target="_blank">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
+            </p>
               <p style="line-height:1px;">
               <small>© Jem 2025</small>
               </p>
