--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,36 @@
   <div class="wrapper">
 
     <section>
+      <style>
+        .my_cover
+        {
+          width: 100%;
+          height: 500px;
+          object-fit: cover;
+        }
+
+        .container
+        {
+          width: 100%;
+          height: 500px;
+          position: relative;
+        }
+
+        .container a
+        {
+          position: absolute;
+          left: 30%;
+          top: 15%;
+          background: black;
+          color: white;
+          text-decoration: none;
+        }
+      </style>
       <div id="title">
+        <div class="container">
+          <p>I'm a bird photographer and gamer.</p>
+          <img class="my_cover" src="banner.JPG">
+        </div>
         <a href="../"><h1>Jem</h1></a>
         <p>I'm a bird photographer and gamer.</p>
         <p>
