--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@
       <div id="title">
         <div class="container">
           <p>I'm a bird photographer and gamer.</p>
-          <img class="my_cover" src="/_layouts/banner.JPG" alt="MISSING JPG"/> 
+          <img class="my_cover" src="banner.jpg" alt="MISSING JPG"/> 
         </div>
         <a href="../"><h1>Jem</h1></a>
         <p>I'm a bird photographer and gamer.</p>
