--- a/_layouts/works.html
+++ b/_layouts/works.html
@@ -52,6 +52,7 @@
         <div>
           <p>
             <strong>Follow me on social media:</strong>
+            <p style="line-height:1px;"></p>
             <br>
             <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
             <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -116,6 +117,7 @@
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
               <small>© Jem 2025</small>
+              </p>
             <br>
     </div>
   </footer>
